--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.1",
+    "@hookform/resolvers": "^3.3.4",
     "@next/third-parties": "^14.1.3",
+    "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-query-devtools": "^5.29.0",
+    "axios": "^1.6.8",
     "lottie-react": "^2.4.0",
     "next": "^14.1.3",
     "react": "latest",
     "react-dom": "latest",
     "react-fast-marquee": "^1.6.2",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^4.11.0",
     "react-toastify": "^10.0.4",
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "autoprefixer": "latest",
