--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^23.10.1",
     "lottie-react": "^2.4.0",
     "next": "^14.1.3",
+    "next-i18next": "^15.2.0",
     "react": "latest",
     "react-dom": "latest",
     "react-fast-marquee": "^1.6.2",
