--- a/package.json
+++ b/package.json
@@ -1,52 +1,43 @@
 {
-	"name": "developer-portfolio",
-	"description": "Portfolio of Abu Said",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"email": "email dev --dir src/emails"
-	},
-	"dependencies": {
-		"@emailjs/browser": "^4.3.1",
-		"@hookform/resolvers": "^3.3.4",
-		"@next/third-parties": "^14.1.3",
-		"@react-email/components": "0.0.16",
-		"@tanstack/react-query": "^5.29.0",
-		"@tanstack/react-query-devtools": "^5.29.0",
-		"accept-language": "^3.0.18",
-		"axios": "^1.6.8",
-		"i18next": "^23.10.1",
-		"i18next-browser-languagedetector": "^7.2.1",
-		"i18next-resources-to-backend": "^1.2.1",
-		"lottie-react": "^2.4.0",
-		"next": "^14.1.3",
-		"next-i18next": "^15.2.0",
-		"react": "latest",
-		"react-cookie": "^7.1.4",
-		"react-dom": "latest",
-		"react-email": "2.1.1",
-		"react-fast-marquee": "^1.6.2",
-		"react-google-recaptcha": "^3.1.0",
-		"react-hook-form": "^7.51.2",
-		"react-i18next": "^14.1.0",
-		"react-icons": "^4.11.0",
-		"react-toastify": "^10.0.4",
-		"resend": "^3.2.0",
-		"zod": "^3.22.4"
-	},
-	"devDependencies": {
-		"@types/node": "^20.12.7",
-		"autoprefixer": "latest",
-		"eslint": "latest",
-		"eslint-config-next": "latest",
-		"postcss": "latest",
-		"sass": "^1.69.5",
-		"tailwindcss": "latest",
-		"typescript": "^5.4.5"
-	},
-	"packageManager": "yarn@4.1.1"
+  "name": "developer-portfolio",
+  "description": "Portfolio of Abu Said",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@emailjs/browser": "^4.3.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@next/third-parties": "^14.1.3",
+    "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-query-devtools": "^5.29.0",
+    "axios": "^1.6.8",
+    "i18next": "^23.10.1",
+    "lottie-react": "^2.4.0",
+    "next": "^14.1.3",
+    "next-i18next": "^15.2.0",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-fast-marquee": "^1.6.2",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.51.2",
+    "react-i18next": "^14.1.0",
+    "react-icons": "^4.11.0",
+    "react-toastify": "^10.0.4",
+    "resend": "^3.2.0",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "postcss": "latest",
+    "sass": "^1.69.5",
+    "tailwindcss": "latest"
+  },
+  "packageManager": "yarn@4.1.1"
 }
