--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,8 +13,8 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.1",
     "@hookform/resolvers": "^3.3.4",
-    "@next/third-parties": "^14.1.3",
-    "@react-email/components": "0.0.16",
+    "@next/third-parties": "15.1.7",
+    "@react-email/components": "0.0.33",
     "@tanstack/react-query": "^5.29.0",
     "@tanstack/react-query-devtools": "^5.29.0",
     "accept-language": "^3.0.18",
@@ -23,11 +23,11 @@
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-resources-to-backend": "^1.2.1",
     "lottie-react": "^2.4.0",
-    "next": "^14.1.3",
+    "next": "15.1.7",
     "next-i18next": "^15.2.0",
-    "react": "latest",
+    "react": "19.0.0",
     "react-cookie": "^7.1.4",
-    "react-dom": "latest",
+    "react-dom": "19.0.0",
     "react-email": "2.1.1",
     "react-fast-marquee": "^1.6.2",
     "react-google-recaptcha": "^3.1.0",
@@ -42,7 +42,7 @@
     "@types/node": "^20.12.7",
     "autoprefixer": "latest",
     "eslint": "latest",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "15.1.7",
     "postcss": "latest",
     "sass": "^1.69.5",
     "tailwindcss": "latest",
