--- a/package.json
+++ b/package.json
@@ -5,26 +5,31 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:next": "next dev",
     "build": "next build",
     "start": "next start",
+    "email": "email dev --dir src/emails",
     "lint": "next lint",
-    "email": "email dev --dir src/emails"
+    "lint:fix": "next lint --fix",
+    "prettier": "prettier --check \"**/*.{js,jsx,ts,tsx}\"",
+    "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
+    "postinstall": "npx patch-package -y"
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.1",
     "@hookform/resolvers": "^3.3.4",
     "@next/third-parties": "15.1.7",
+    "@pdfslick/react": "^2.1.3",
     "@react-email/components": "0.0.33",
+    "@tailwindcss/postcss": "^4.0.8",
     "@tanstack/react-query": "^5.29.0",
     "@tanstack/react-query-devtools": "^5.29.0",
     "accept-language": "^3.0.18",
     "axios": "^1.6.8",
-    "i18next": "^23.10.1",
-    "i18next-browser-languagedetector": "^7.2.1",
-    "i18next-resources-to-backend": "^1.2.1",
+    "clsx": "^2.1.1",
     "lottie-react": "^2.4.0",
-    "next": "15.1.7",
-    "next-i18next": "^15.2.0",
+    "next": "15.2.0-canary.71",
+    "next-intl": "^3.26.5",
     "react": "19.0.0",
     "react-cookie": "^7.1.4",
     "react-dom": "19.0.0",
@@ -32,21 +37,34 @@
     "react-fast-marquee": "^1.6.2",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.2",
-    "react-i18next": "^14.1.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^10.0.4",
     "resend": "^3.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.0",
+    "@next/eslint-plugin-next": "^15.1.7",
     "@types/node": "^20.12.7",
     "autoprefixer": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "15.1.7",
-    "postcss": "latest",
+    "babel-plugin-react-compiler": "19.0.0-beta-e1e972c-20250221",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.1.7",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "file-loader": "^6.2.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.69.5",
-    "tailwindcss": "latest",
+    "tailwindcss": "^4.0.8",
     "typescript": "^5.4.5"
   },
-  "packageManager": "yarn@4.1.1"
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "esbuild"
+    ]
+  }
 }
