--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "lint:fix": "next lint --fix",
     "prettier": "prettier --check \"**/*.{js,jsx,ts,tsx}\"",
     "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
-    "postinstall": "npx patch-package -y"
+    "build:worker": "opennextjs-cloudflare",
+    "dev:worker": "wrangler dev --port 8771",
+    "preview:worker": "npm run build:worker && npm run dev:worker",
+    "deploy:worker": "npm run build:worker && wrangler deploy"
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.1",
     "@hookform/resolvers": "^3.3.4",
-    "@next/third-parties": "15.1.7",
     "@react-email/components": "0.0.33",
     "@tailwindcss/postcss": "^4.0.8",
     "@tanstack/react-query": "^5.29.0",
@@ -27,7 +29,7 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "lottie-react": "^2.4.0",
-    "next": "15.2.0-canary.71",
+    "next": "^15.1.7",
     "next-intl": "^3.26.5",
     "react": "19.0.0",
     "react-cookie": "^7.1.4",
@@ -53,18 +55,13 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-tailwindcss": "^3.18.0",
     "file-loader": "^6.2.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.69.5",
     "tailwindcss": "^4.0.8",
-    "typescript": "^5.4.5"
-  },
-  "pnpm": {
-    "ignoredBuiltDependencies": [
-      "esbuild"
-    ]
+    "typescript": "^5.4.5",
+    "wrangler": "^3.109.3"
   }
 }
