--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emailjs/browser": "^4.3.1",
     "@hookform/resolvers": "^3.3.4",
     "@react-email/components": "0.0.33",
+    "@sentry/nextjs": "^9",
     "@tailwindcss/postcss": "^4.0.8",
     "@tanstack/react-query": "^5.29.0",
     "@tanstack/react-query-devtools": "^5.29.0",
