Add eslint settings

--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "@eslint/eslintrc": "^3.3.0",
     "@next/eslint-plugin-next": "^15.1.7",
     "@opennextjs/cloudflare": "^0.5.3",
+    "@stylistic/eslint-plugin": "^4.1.0",
     "@types/node": "^20.12.7",
     "autoprefixer": "latest",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-react-compiler": "19.0.0-beta-e1e972c-20250221",
     "eslint": "^9.21.0",
     "eslint-config-next": "^15.1.7",
